tmp/wrong_1640055628.812928.txt
static 'static'	 [StartOfLine]	Loc=<./tmp/code_9.c:1:1>
void 'void'	 [LeadingSpace]	Loc=<./tmp/code_9.c:1:8>
identifier 'sbr_qmf_analysis'	 [LeadingSpace]	Loc=<./tmp/code_9.c:1:13>
l_paren '('		Loc=<./tmp/code_9.c:1:29>
identifier 'AVFixedDSPContext'		Loc=<./tmp/code_9.c:1:30>
star '*'	 [LeadingSpace]	Loc=<./tmp/code_9.c:1:48>
identifier 'dsp'		Loc=<./tmp/code_9.c:1:49>
comma ','		Loc=<./tmp/code_9.c:1:52>
identifier 'FFTContext'	 [LeadingSpace]	Loc=<./tmp/code_9.c:1:54>
star '*'	 [LeadingSpace]	Loc=<./tmp/code_9.c:1:65>
identifier 'mdct'		Loc=<./tmp/code_9.c:1:66>
comma ','		Loc=<./tmp/code_9.c:1:70>
./tmp/code_9.c:3:2: error: #else without #if
#else
 ^
static 'static'	 [StartOfLine]	Loc=<./tmp/code_9.c:5:1>
void 'void'	 [LeadingSpace]	Loc=<./tmp/code_9.c:5:8>
identifier 'sbr_qmf_analysis'	 [LeadingSpace]	Loc=<./tmp/code_9.c:5:13>
l_paren '('		Loc=<./tmp/code_9.c:5:29>
identifier 'AVFloatDSPContext'		Loc=<./tmp/code_9.c:5:30>
star '*'	 [LeadingSpace]	Loc=<./tmp/code_9.c:5:48>
identifier 'dsp'		Loc=<./tmp/code_9.c:5:49>
comma ','		Loc=<./tmp/code_9.c:5:52>
identifier 'FFTContext'	 [LeadingSpace]	Loc=<./tmp/code_9.c:5:54>
star '*'	 [LeadingSpace]	Loc=<./tmp/code_9.c:5:65>
identifier 'mdct'		Loc=<./tmp/code_9.c:5:66>
comma ','		Loc=<./tmp/code_9.c:5:70>
./tmp/code_9.c:7:2: error: #endif without #if
#endif /* USE_FIXED */
 ^
identifier 'SBRDSPContext'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_9.c:9:30>
star '*'	 [LeadingSpace]	Loc=<./tmp/code_9.c:9:44>
identifier 'sbrdsp'		Loc=<./tmp/code_9.c:9:45>
comma ','		Loc=<./tmp/code_9.c:9:51>
const 'const'	 [LeadingSpace]	Loc=<./tmp/code_9.c:9:53>
identifier 'INTFLOAT'	 [LeadingSpace]	Loc=<./tmp/code_9.c:9:59>
star '*'	 [LeadingSpace]	Loc=<./tmp/code_9.c:9:68>
identifier 'in'		Loc=<./tmp/code_9.c:9:69>
comma ','		Loc=<./tmp/code_9.c:9:71>
identifier 'INTFLOAT'	 [LeadingSpace]	Loc=<./tmp/code_9.c:9:73>
star '*'	 [LeadingSpace]	Loc=<./tmp/code_9.c:9:82>
identifier 'x'		Loc=<./tmp/code_9.c:9:83>
comma ','		Loc=<./tmp/code_9.c:9:84>
identifier 'INTFLOAT'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_9.c:11:30>
identifier 'z'	 [LeadingSpace]	Loc=<./tmp/code_9.c:11:39>
l_square '['		Loc=<./tmp/code_9.c:11:40>
numeric_constant '320'		Loc=<./tmp/code_9.c:11:41>
r_square ']'		Loc=<./tmp/code_9.c:11:44>
comma ','		Loc=<./tmp/code_9.c:11:45>
identifier 'INTFLOAT'	 [LeadingSpace]	Loc=<./tmp/code_9.c:11:47>
identifier 'W'	 [LeadingSpace]	Loc=<./tmp/code_9.c:11:56>
l_square '['		Loc=<./tmp/code_9.c:11:57>
numeric_constant '2'		Loc=<./tmp/code_9.c:11:58>
r_square ']'		Loc=<./tmp/code_9.c:11:59>
l_square '['		Loc=<./tmp/code_9.c:11:60>
numeric_constant '32'		Loc=<./tmp/code_9.c:11:61>
r_square ']'		Loc=<./tmp/code_9.c:11:63>
l_square '['		Loc=<./tmp/code_9.c:11:64>
numeric_constant '32'		Loc=<./tmp/code_9.c:11:65>
r_square ']'		Loc=<./tmp/code_9.c:11:67>
l_square '['		Loc=<./tmp/code_9.c:11:68>
numeric_constant '2'		Loc=<./tmp/code_9.c:11:69>
r_square ']'		Loc=<./tmp/code_9.c:11:70>
comma ','		Loc=<./tmp/code_9.c:11:71>
int 'int'	 [LeadingSpace]	Loc=<./tmp/code_9.c:11:73>
identifier 'buf_idx'	 [LeadingSpace]	Loc=<./tmp/code_9.c:11:77>
r_paren ')'		Loc=<./tmp/code_9.c:11:84>
l_brace '{'	 [StartOfLine]	Loc=<./tmp/code_9.c:13:1>
int 'int'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_9.c:15:5>
identifier 'i'	 [LeadingSpace]	Loc=<./tmp/code_9.c:15:9>
semi ';'		Loc=<./tmp/code_9.c:15:10>
int 'int'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_9.c:18:5>
identifier 'j'	 [LeadingSpace]	Loc=<./tmp/code_9.c:18:9>
semi ';'		Loc=<./tmp/code_9.c:18:10>
identifier 'memcpy'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_9.c:21:5>
l_paren '('		Loc=<./tmp/code_9.c:21:11>
identifier 'x'		Loc=<./tmp/code_9.c:21:12>
comma ','	 [LeadingSpace]	Loc=<./tmp/code_9.c:21:17>
identifier 'x'	 [LeadingSpace]	Loc=<./tmp/code_9.c:21:19>
plus '+'		Loc=<./tmp/code_9.c:21:20>
numeric_constant '1024'		Loc=<./tmp/code_9.c:21:21>
comma ','		Loc=<./tmp/code_9.c:21:25>
l_paren '('	 [LeadingSpace]	Loc=<./tmp/code_9.c:21:27>
numeric_constant '320'		Loc=<./tmp/code_9.c:21:28>
minus '-'		Loc=<./tmp/code_9.c:21:31>
numeric_constant '32'		Loc=<./tmp/code_9.c:21:32>
r_paren ')'		Loc=<./tmp/code_9.c:21:34>
star '*'		Loc=<./tmp/code_9.c:21:35>
sizeof 'sizeof'		Loc=<./tmp/code_9.c:21:36>
l_paren '('		Loc=<./tmp/code_9.c:21:42>
identifier 'x'		Loc=<./tmp/code_9.c:21:43>
l_square '['		Loc=<./tmp/code_9.c:21:44>
numeric_constant '0'		Loc=<./tmp/code_9.c:21:45>
r_square ']'		Loc=<./tmp/code_9.c:21:46>
r_paren ')'		Loc=<./tmp/code_9.c:21:47>
r_paren ')'		Loc=<./tmp/code_9.c:21:48>
semi ';'		Loc=<./tmp/code_9.c:21:49>
identifier 'memcpy'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_9.c:23:5>
l_paren '('		Loc=<./tmp/code_9.c:23:11>
identifier 'x'		Loc=<./tmp/code_9.c:23:12>
plus '+'		Loc=<./tmp/code_9.c:23:13>
numeric_constant '288'		Loc=<./tmp/code_9.c:23:14>
comma ','		Loc=<./tmp/code_9.c:23:17>
identifier 'in'	 [LeadingSpace]	Loc=<./tmp/code_9.c:23:19>
comma ','		Loc=<./tmp/code_9.c:23:21>
numeric_constant '1024'	 [LeadingSpace]	Loc=<./tmp/code_9.c:23:31>
star '*'		Loc=<./tmp/code_9.c:23:35>
sizeof 'sizeof'		Loc=<./tmp/code_9.c:23:36>
l_paren '('		Loc=<./tmp/code_9.c:23:42>
identifier 'x'		Loc=<./tmp/code_9.c:23:43>
l_square '['		Loc=<./tmp/code_9.c:23:44>
numeric_constant '0'		Loc=<./tmp/code_9.c:23:45>
r_square ']'		Loc=<./tmp/code_9.c:23:46>
r_paren ')'		Loc=<./tmp/code_9.c:23:47>
r_paren ')'		Loc=<./tmp/code_9.c:23:48>
semi ';'		Loc=<./tmp/code_9.c:23:49>
for 'for'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_9.c:25:5>
l_paren '('	 [LeadingSpace]	Loc=<./tmp/code_9.c:25:9>
identifier 'i'		Loc=<./tmp/code_9.c:25:10>
equal '='	 [LeadingSpace]	Loc=<./tmp/code_9.c:25:12>
numeric_constant '0'	 [LeadingSpace]	Loc=<./tmp/code_9.c:25:14>
semi ';'		Loc=<./tmp/code_9.c:25:15>
identifier 'i'	 [LeadingSpace]	Loc=<./tmp/code_9.c:25:17>
less '<'	 [LeadingSpace]	Loc=<./tmp/code_9.c:25:19>
numeric_constant '32'	 [LeadingSpace]	Loc=<./tmp/code_9.c:25:21>
semi ';'		Loc=<./tmp/code_9.c:25:23>
identifier 'i'	 [LeadingSpace]	Loc=<./tmp/code_9.c:25:25>
plusplus '++'		Loc=<./tmp/code_9.c:25:26>
r_paren ')'		Loc=<./tmp/code_9.c:25:28>
l_brace '{'	 [LeadingSpace]	Loc=<./tmp/code_9.c:25:30>
identifier 'dsp'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_9.c:29:9>
arrow '->'		Loc=<./tmp/code_9.c:29:12>
identifier 'vector_fmul_reverse'		Loc=<./tmp/code_9.c:29:14>
l_paren '('		Loc=<./tmp/code_9.c:29:33>
identifier 'z'		Loc=<./tmp/code_9.c:29:34>
comma ','		Loc=<./tmp/code_9.c:29:35>
identifier 'sbr_qmf_window_ds'	 [LeadingSpace]	Loc=<./tmp/code_9.c:29:37>
comma ','		Loc=<./tmp/code_9.c:29:54>
identifier 'x'	 [LeadingSpace]	Loc=<./tmp/code_9.c:29:56>
comma ','		Loc=<./tmp/code_9.c:29:57>
numeric_constant '320'	 [LeadingSpace]	Loc=<./tmp/code_9.c:29:59>
r_paren ')'		Loc=<./tmp/code_9.c:29:62>
semi ';'		Loc=<./tmp/code_9.c:29:63>
identifier 'sbrdsp'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_9.c:31:9>
arrow '->'		Loc=<./tmp/code_9.c:31:15>
identifier 'sum64x5'		Loc=<./tmp/code_9.c:31:17>
l_paren '('		Loc=<./tmp/code_9.c:31:24>
identifier 'z'		Loc=<./tmp/code_9.c:31:25>
r_paren ')'		Loc=<./tmp/code_9.c:31:26>
semi ';'		Loc=<./tmp/code_9.c:31:27>
identifier 'sbrdsp'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_9.c:33:9>
arrow '->'		Loc=<./tmp/code_9.c:33:15>
identifier 'qmf_pre_shuffle'		Loc=<./tmp/code_9.c:33:17>
l_paren '('		Loc=<./tmp/code_9.c:33:32>
identifier 'z'		Loc=<./tmp/code_9.c:33:33>
r_paren ')'		Loc=<./tmp/code_9.c:33:34>
semi ';'		Loc=<./tmp/code_9.c:33:35>
identifier 'mdct'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_9.c:50:9>
arrow '->'		Loc=<./tmp/code_9.c:50:13>
identifier 'imdct_half'		Loc=<./tmp/code_9.c:50:15>
l_paren '('		Loc=<./tmp/code_9.c:50:25>
identifier 'mdct'		Loc=<./tmp/code_9.c:50:26>
comma ','		Loc=<./tmp/code_9.c:50:30>
identifier 'z'	 [LeadingSpace]	Loc=<./tmp/code_9.c:50:32>
comma ','		Loc=<./tmp/code_9.c:50:33>
identifier 'z'	 [LeadingSpace]	Loc=<./tmp/code_9.c:50:35>
plus '+'		Loc=<./tmp/code_9.c:50:36>
numeric_constant '64'		Loc=<./tmp/code_9.c:50:37>
r_paren ')'		Loc=<./tmp/code_9.c:50:39>
semi ';'		Loc=<./tmp/code_9.c:50:40>
identifier 'sbrdsp'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_9.c:52:9>
arrow '->'		Loc=<./tmp/code_9.c:52:15>
identifier 'qmf_post_shuffle'		Loc=<./tmp/code_9.c:52:17>
l_paren '('		Loc=<./tmp/code_9.c:52:33>
identifier 'W'		Loc=<./tmp/code_9.c:52:34>
l_square '['		Loc=<./tmp/code_9.c:52:35>
identifier 'buf_idx'		Loc=<./tmp/code_9.c:52:36>
r_square ']'		Loc=<./tmp/code_9.c:52:43>
l_square '['		Loc=<./tmp/code_9.c:52:44>
identifier 'i'		Loc=<./tmp/code_9.c:52:45>
r_square ']'		Loc=<./tmp/code_9.c:52:46>
comma ','		Loc=<./tmp/code_9.c:52:47>
identifier 'z'	 [LeadingSpace]	Loc=<./tmp/code_9.c:52:49>
r_paren ')'		Loc=<./tmp/code_9.c:52:50>
semi ';'		Loc=<./tmp/code_9.c:52:51>
identifier 'x'	 [StartOfLine] [LeadingSpace]	Loc=<./tmp/code_9.c:54:9>
plusequal '+='	 [LeadingSpace]	Loc=<./tmp/code_9.c:54:11>
numeric_constant '32'	 [LeadingSpace]	Loc=<./tmp/code_9.c:54:14>
semi ';'		Loc=<./tmp/code_9.c:54:16>
eof ''		Loc=<./tmp/code_9.c:55:1>
2 errors generated.
